spade-tests/src/snapshots/spade_tests__parser__missing_end_of_range_index_is_error.snap
---
source: spade-tests/src/parser.rs
---
fn top() -> bool {
    let a = [true, true, false];
    a[1:]
}


error: Expected end of range
  ┌─ testinput:3:9
  │
3 │     a[1:]
  │       --^ Expected end of range
  │       │  
  │       ...since this index is a range
